--- a/notebooks/03 Logistic Regression.ipynb
+++ b/notebooks/03 Logistic Regression.ipynb
@@ -350,7 +350,7 @@
     "id": "znFomkVnKo-q"
    },
    "source": [
-    "We code up out model."
+    "We code up our model."
    ]
   },
   {
@@ -1430,7 +1430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
