--- a/notebooks/09 RNN Sentiment Classification.ipynb
+++ b/notebooks/09 RNN Sentiment Classification.ipynb
@@ -2469,7 +2469,7 @@
     "id": "wks2PTmsefUe"
    },
    "source": [
-    "To solve this, we'll look at a couple technique we can use."
+    "To solve this, we'll look at a couple techniques we can use."
    ]
   },
   {
@@ -3930,7 +3930,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
